tests/neg/tracked2.scala
class C(tracked val x: Int) // error
